Add container section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,100 @@
       <h1>christine Waczynski</h1>
     </div>
 
-    <!--  -->
+    <!-- Container Section-->
+    <div class="container">
+      <div class="card">
+        <img src="https://source.unsplash.com/random/500x650/?nature" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+
+      <!-- About Section -->
+      <div class="card" data-aos="fade-up">
+        <h2>About</h2>
+      </div>
+      <div class="card" data-aos="fade-up">
+        <img
+          src="https://source.unsplash.com/random/400x400/?potraits"
+          alt=""
+        />
+      </div>
+
+      <!-- About Section Info -->
+      <div class="about-section card" data-aos="fade-up">
+        <div>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
+          nesciunt culpa voluptatem consequuntur cupiditate debitis hic quas,
+          explicabo exercitationem? Esse perferendis fugiat laborum dolore
+          labore adipisci consequatur debitis quia eveniet rem nesciunt incidunt
+          provident ipsam id impedit quod aperiam optio modi a, iure corporis
+          similique dolor dolorum! Atque suscipit, dolorem fugit modi assumenda
+          corporis amet deserunt quas explicabo nobis eos aspernatur aliquam
+          exercitationem, tempore maxime voluptate autem sed animi. Neque
+          tenetur illum consequatur vel laudantium accusamus quas voluptates
+          distinctio veritatis aspernatur ratione esse ut, maxime alias quam
+          cumque accusantium magni cum a? Sed molestias et sapiente rerum.
+          Repudiandae, asperiores maxime.
+        </div>
+        <div>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores,
+          corrupti doloribus culpa obcaecati eveniet eius totam minima commodi
+          aperiam perspiciatis explicabo quasi laborum odio animi suscipit unde
+          voluptates velit? Quos eligendi voluptates labore quibusdam soluta
+          tempore impedit, quod fugit vel odio error corporis. A cumque,
+          laboriosam commodi aliquam iure deleniti error maiores sunt odit quod
+          veniam esse quam, earum, hic architecto fugit id vel tempora nam?
+          Iusto, minus hic expedita laudantium culpa asperiores assumenda odio
+          nisi enim suscipit aliquid saepe necessitatibus eaque voluptatem odit
+          iste ut, inventore a nihil dicta numquam tempore dignissimos
+          voluptates modi? Voluptas totam ea suscipit harum.
+        </div>
+      </div>
+
+      <!-- Photo Cards Below -->
+      <div class="card" data-aos="fade-up">
+        <img
+          src="https://source.unsplash.com/random/500x500/?painting"
+          alt="#"
+        />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-up">
+        <img
+          src="https://source.unsplash.com/random/500x500/?animals"
+          alt="#"
+        />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-up">
+        <img src="https://source.unsplash.com/random/500x500/?oceans" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-up">
+        <img src="https://source.unsplash.com/random/500x500/?sea" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-up">
+        <img
+          src="https://source.unsplash.com/random/500x500/?building"
+          alt="#"
+        />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-up">
+        <img src="https://source.unsplash.com/random/500x500/?cars" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-up">
+        <img src="https://source.unsplash.com/random/350x600/?forest" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-up">
+        <img
+          src="https://source.unsplash.com/random/500x500/?landscape"
+          alt="#"
+        />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+    </div>
   </body>
 </html>
