Add footer section

--- a/index.html
+++ b/index.html
@@ -115,5 +115,8 @@
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
     </div>
+
+    <!-- Footer Section -->
+    <footer>&copy; MISFITS INC, 2021</footer>
   </body>
 </html>
