Add CSS animation link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       name="description"
       content="Architecture and landscape photographer"
     />
+    <!-- CSS animation -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Photo Gallery</title>
   </head>
   <body>
