--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     />
     <!-- CSS animation -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- Stylesheet Link -->
+    <link rel="stylesheet" href="styles.css" />
     <title>Photo Gallery</title>
   </head>
   <body>
