--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Stylesheet Link -->
     <link rel="stylesheet" href="styles.css" />
-    <title>Photo Gallery</title>
+    <title>Personal Portfolio</title>
   </head>
   <body>
     <!-- Header Section -->
