--- a/index.html
+++ b/index.html
@@ -122,5 +122,14 @@
 
     <!-- Footer Section -->
     <footer>&copy; MISFITS INC, 2021</footer>
+
+    <!-- AOS JS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 400,
+        duration: 1000,
+      });
+    </script>
   </body>
 </html>
