--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!-- Header Section -->
     <div class="header">
-      <h1>christine Waczynski</h1>
+      <h1>Christine Waczynski</h1>
     </div>
 
     <!-- Container Section-->
