Add scroll animations and more photos

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
   </head>
   <body>
     <!-- Header Section -->
-    <div class="header">
+    <div class="header" data-aos="zoom-in">
       <h1>Christine Waczynski</h1>
     </div>
 
     <!-- Container Section-->
     <div class="container">
-      <div class="card">
-        <img src="https://source.unsplash.com/random/500x650/?nature" alt="#" />
+      <div class="card" data-aos="zoom-in-down">
+        <img src="https://source.unsplash.com/random/500x350/?nature" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
 
       <!-- About Section -->
-      <div class="card" data-aos="fade-up">
+      <div class="card" data-aos="zoom-in">
         <h2>About</h2>
       </div>
       <div class="card" data-aos="fade-up">
@@ -43,7 +43,7 @@
       </div>
 
       <!-- About Section Info -->
-      <div class="about-section card" data-aos="fade-up">
+      <div class="about-section card" data-aos="zoom-in-up">
         <div>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
           nesciunt culpa voluptatem consequuntur cupiditate debitis hic quas,
@@ -75,45 +75,99 @@
 
       <!-- Photo Cards Below -->
       <div class="card" data-aos="fade-up">
-        <img
-          src="https://source.unsplash.com/random/500x500/?painting"
-          alt="#"
-        />
+        <img src="https://source.unsplash.com/random/300x400/?art" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-up">
+      <div class="card" data-aos="fade-up-right">
         <img
           src="https://source.unsplash.com/random/500x500/?animals"
           alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x500/?oceans" alt="#" />
+      <div class="card" data-aos="fade-up-left">
+        <img src="https://source.unsplash.com/random/500x200/?oceans" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-up">
+      <div class="card" data-aos="flip-right">
         <img src="https://source.unsplash.com/random/500x500/?sea" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-up">
+      <div class="card" data-aos="flip-left">
         <img
           src="https://source.unsplash.com/random/500x500/?building"
           alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-up">
+      <div class="card" data-aos="flip-up">
         <img src="https://source.unsplash.com/random/500x500/?cars" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/350x600/?forest" alt="#" />
+      <div class="card" data-aos="flip-down">
+        <img src="https://source.unsplash.com/random/500x400/?forest" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-up">
+      <div class="card" data-aos="zoom-in-up">
         <img
           src="https://source.unsplash.com/random/500x500/?landscape"
+          alt="#"
+        />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="zoom-in-down">
+        <img src="https://source.unsplash.com/random/500x400/?sky" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="zoom-in-right">
+        <img src="https://source.unsplash.com/random/500x400/?water" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="zoom-in-left">
+        <img src="https://source.unsplash.com/random/500x400/?road" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="zoom-out">
+        <img
+          src="https://source.unsplash.com/random/500x400/?building"
+          alt="#"
+        />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="zoom-out-up">
+        <img src="https://source.unsplash.com/random/500x400/?cats" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="zoom-out-down">
+        <img
+          src="https://source.unsplash.com/random/500x400/?sculpture"
+          alt="#"
+        />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="zoom-out-right">
+        <img src="https://source.unsplash.com/random/500x400/?art" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="zoom-out-left">
+        <img src="https://source.unsplash.com/random/500x400/?paint" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-up-right">
+        <img src="https://source.unsplash.com/random/500x400/?city" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-down-left">
+        <img src="https://source.unsplash.com/random/500x400/?bush" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-up-left">
+        <img src="https://source.unsplash.com/random/500x400/?cars" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="zoom-in-down">
+        <img
+          src="https://source.unsplash.com/random/500x400/?vintage"
           alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
