Change image transitions and image source urls

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="card" data-aos="zoom-in">
         <h2>About</h2>
       </div>
-      <div class="card" data-aos="fade-up">
+      <div class="card" data-aos="fade-in">
         <img
           src="https://source.unsplash.com/random/400x400/?potraits"
           alt=""
@@ -43,7 +43,7 @@
       </div>
 
       <!-- About Section Info -->
-      <div class="about-section card" data-aos="zoom-in-up">
+      <div class="about-section card" data-aos="zoom-in">
         <div>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
           nesciunt culpa voluptatem consequuntur cupiditate debitis hic quas,
@@ -74,98 +74,99 @@
       </div>
 
       <!-- Photo Cards Below -->
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/300x400/?art" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up-right">
+      <div class="card" data-aos="fade-in">
         <img
-          src="https://source.unsplash.com/random/500x500/?animals"
+          src="https://source.unsplash.com/random/500x400/?fashion"
           alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-up-left">
-        <img src="https://source.unsplash.com/random/500x200/?oceans" alt="#" />
+      <div class="card" data-aos="fade-in">
+        <img src="https://source.unsplash.com/random/500x500/?color" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="flip-right">
-        <img src="https://source.unsplash.com/random/500x500/?sea" alt="#" />
+      <div class="card" data-aos="fade-in">
+        <img src="https://source.unsplash.com/random/500x400/?oceans" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="flip-left">
+      <div class="card" data-aos="fade-in">
+        <img src="https://source.unsplash.com/random/500x500/?wild" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-in">
         <img
-          src="https://source.unsplash.com/random/500x500/?building"
+          src="https://source.unsplash.com/random/500x500/?gallery"
           alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="flip-up">
-        <img src="https://source.unsplash.com/random/500x500/?cars" alt="#" />
+      <div class="card" data-aos="fade-in">
+        <img src="https://source.unsplash.com/random/500x500/?bikes" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="flip-down">
+      <div class="card" data-aos="fade-in">
+        <img src="https://source.unsplash.com/random/500x400/?trees" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-in">
+        <img src="https://source.unsplash.com/random/500x500/?snow" alt="#" />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-in">
         <img src="https://source.unsplash.com/random/500x400/?forest" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="zoom-in-up">
-        <img
-          src="https://source.unsplash.com/random/500x500/?landscape"
-          alt="#"
-        />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="zoom-in-down">
-        <img src="https://source.unsplash.com/random/500x400/?sky" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="zoom-in-right">
+      <div class="card" data-aos="fade-in">
         <img src="https://source.unsplash.com/random/500x400/?water" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="zoom-in-left">
-        <img src="https://source.unsplash.com/random/500x400/?road" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="zoom-out">
+      <div class="card" data-aos="fade-in">
         <img
-          src="https://source.unsplash.com/random/500x400/?building"
+          src="https://source.unsplash.com/random/500x400/?vegetation"
           alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="zoom-out-up">
-        <img src="https://source.unsplash.com/random/500x400/?cats" alt="#" />
+      <div class="card" data-aos="fade-in">
+        <img src="https://source.unsplash.com/random/500x400/?sky" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="zoom-out-down">
+      <div class="card" data-aos="fade-in">
         <img
-          src="https://source.unsplash.com/random/500x400/?sculpture"
+          src="https://source.unsplash.com/random/500x400/?animals"
           alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="zoom-out-right">
+      <div class="card" data-aos="fade-in">
+        <img
+          src="https://source.unsplash.com/random/500x400/?architecture"
+          alt="#"
+        />
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div class="card" data-aos="fade-in">
         <img src="https://source.unsplash.com/random/500x400/?art" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="zoom-out-left">
-        <img src="https://source.unsplash.com/random/500x400/?paint" alt="#" />
+      <div class="card" data-aos="fade-in">
+        <img src="https://source.unsplash.com/random/500x400/?landscape alt="#"
+        />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-up-right">
-        <img src="https://source.unsplash.com/random/500x400/?city" alt="#" />
+      <div class="card" data-aos="fade-in">
+        <img src="https://source.unsplash.com/random/500x400/?tech" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-down-left">
-        <img src="https://source.unsplash.com/random/500x400/?bush" alt="#" />
+      <div class="card" data-aos="fade-in">
+        <img src="https://source.unsplash.com/random/500x400/?love" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-up-left">
+      <div class="card" data-aos="fade-in">
         <img src="https://source.unsplash.com/random/500x400/?cars" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="zoom-in-down">
+      <div class="card" data-aos="fade-in">
         <img
           src="https://source.unsplash.com/random/500x400/?vintage"
           alt="#"
@@ -181,8 +182,8 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
-        offset: 500,
-        duration: 1500,
+        offset: 400,
+        duration: 1000,
       });
     </script>
   </body>
