Edit image urls

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <!-- Container Section-->
     <div class="container">
       <div class="card" data-aos="zoom-in-down">
-        <img src="https://source.unsplash.com/random/500x350/?nature" alt="#" />
+        <img
+          src="https://source.unsplash.com/random/500x350/?nature,trees"
+          alt="#"
+        />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
 
@@ -36,10 +39,7 @@
         <h2>About</h2>
       </div>
       <div class="card" data-aos="fade-in">
-        <img
-          src="https://source.unsplash.com/random/400x400/?potraits"
-          alt=""
-        />
+        <img src="https://source.unsplash.com/random/400x400/?potrait" alt="" />
       </div>
 
       <!-- About Section Info -->
