change the scroll animation

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <!-- About Section Info -->
-      <div class="about-section card" data-aos="zoom-in">
+      <div class="about-section card" data-aos="fade-up">
         <div>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
           nesciunt culpa voluptatem consequuntur cupiditate debitis hic quas,
@@ -74,99 +74,99 @@
       </div>
 
       <!-- Photo Cards Below -->
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img
           src="https://source.unsplash.com/random/500x400/?fashion"
           alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x500/?color" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x400/?oceans" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x500/?wild" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img
           src="https://source.unsplash.com/random/500x500/?gallery"
           alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x500/?bikes" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x400/?trees" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x500/?snow" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x400/?forest" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x400/?water" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img
           src="https://source.unsplash.com/random/500x400/?vegetation"
           alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x400/?sky" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img
           src="https://source.unsplash.com/random/500x400/?animals"
           alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img
           src="https://source.unsplash.com/random/500x400/?architecture"
           alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x400/?art" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x400/?landscape alt="#"
         />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x400/?tech" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x400/?love" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img src="https://source.unsplash.com/random/500x400/?cars" alt="#" />
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div class="card" data-aos="fade-in">
+      <div class="card" data-aos="fade-up">
         <img
           src="https://source.unsplash.com/random/500x400/?vintage"
           alt="#"
