Add social media links

--- a/index.html
+++ b/index.html
@@ -175,6 +175,28 @@
       </div>
     </div>
 
+    <!--Socials Section -->
+    <div class="socials">
+      <div>
+        <a href="https://www.instagram.com" target="_blank"
+          ><img
+            src="./assets/icons/instagram.png"
+            alt="instagram icon"
+            width="25"
+            height="25"
+        /></a>
+      </div>
+      <div>
+        <a href="https://www.behance.net/galleries/fine-arts" target="_blank"
+          ><img
+            src="./assets/icons/behance.png"
+            alt="behance icon"
+            width="25"
+            height="25"
+        /></a>
+      </div>
+    </div>
+
     <!-- Footer Section -->
     <footer>&copy; MISFITS INC, 2021</footer>
 
