--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- CSS animation -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Stylesheet Link -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Personal Portfolio</title>
   </head>
   <body>
