--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <!--Socials Section -->
     <div class="socials">
       <div>
-        <a href="https://www.instagram.com" target="_blank"
+        <a href="https://www.instagram.com/sewing_me_" target="_blank"
           ><img
             src="./assets/icons/instagram.png"
             alt="instagram icon"
