--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="photos" content="index, follow" />
     <meta
       name="description"
-      content="Architecture and landscape photographer"
+      content="Art"
     />
     <!-- CSS animation -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Stylesheet Link -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
-    <title>Personal Portfolio</title>
+    <title>Christine Waczynski</title>
   </head>
   <body>
     <!-- Header Section -->
