--- a/index.html
+++ b/index.html
@@ -177,15 +177,9 @@
 
     <!--Socials Section -->
     <div class="socials">
-      <div>
-        <a href="https://www.instagram.com" target="_blank"
-          ><img
-            src="./assets/icons/instagram.png"
-            alt="instagram icon"
-            width="25"
-            height="25"
-        /></a>
-      </div>
+      <a href="https://www.instagram.com" target="_blank"
+        ><img src="./assets/icons/instagram.png" alt="instagram icon" />
+      </a>
     </div>
     <!-- Footer Section -->
     <footer>&copy; MISFITS INC, 2021</footer>
