Add and style a navbar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
@@ -12,171 +13,27 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Christine Waczynski</title>
   </head>
+
   <body>
-    <!-- Header Section -->
-    <div class="header" data-aos="zoom-in">
-      <h1>Christine Waczynski</h1>
-    </div>
+    <!-- Navbar Section -->
+    <nav>
+      <div class="wrapper">
+        <div class="logo"><a href="index.html">Christine Waczynski</a></div>
+        <ul class="nav-links">
+          <li><a href="about.html">About</a></li>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li class="socials">
+            <a href="https://www.instagram.com">
+              <img src="./assets/icons/instagram.png" alt="instagram icon" />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-    <!-- Container Section-->
-    <div class="container">
-      <div class="card" data-aos="zoom-in-down">
-        <img
-          src="https://source.unsplash.com/random/500x350/?nature,trees"
-          alt="#"
-        />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-
-      <!-- About Section -->
-      <div class="card" data-aos="zoom-in">
-        <h2>About</h2>
-      </div>
-      <div class="card" data-aos="fade-in">
-        <img src="https://source.unsplash.com/random/400x400/?potrait" alt="" />
-      </div>
-
-      <!-- About Section Info -->
-      <div class="about-section card" data-aos="fade-up">
-        <div>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
-          nesciunt culpa voluptatem consequuntur cupiditate debitis hic quas,
-          explicabo exercitationem? Esse perferendis fugiat laborum dolore
-          labore adipisci consequatur debitis quia eveniet rem nesciunt incidunt
-          provident ipsam id impedit quod aperiam optio modi a, iure corporis
-          similique dolor dolorum! Atque suscipit, dolorem fugit modi assumenda
-          corporis amet deserunt quas explicabo nobis eos aspernatur aliquam
-          exercitationem, tempore maxime voluptate autem sed animi. Neque
-          tenetur illum consequatur vel laudantium accusamus quas voluptates
-          distinctio veritatis aspernatur ratione esse ut, maxime alias quam
-          cumque accusantium magni cum a? Sed molestias et sapiente rerum.
-          Repudiandae, asperiores maxime.
-        </div>
-        <div>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores,
-          corrupti doloribus culpa obcaecati eveniet eius totam minima commodi
-          aperiam perspiciatis explicabo quasi laborum odio animi suscipit unde
-          voluptates velit? Quos eligendi voluptates labore quibusdam soluta
-          tempore impedit, quod fugit vel odio error corporis. A cumque,
-          laboriosam commodi aliquam iure deleniti error maiores sunt odit quod
-          veniam esse quam, earum, hic architecto fugit id vel tempora nam?
-          Iusto, minus hic expedita laudantium culpa asperiores assumenda odio
-          nisi enim suscipit aliquid saepe necessitatibus eaque voluptatem odit
-          iste ut, inventore a nihil dicta numquam tempore dignissimos
-          voluptates modi? Voluptas totam ea suscipit harum.
-        </div>
-      </div>
-
-      <!-- Photo Cards Below -->
-      <div class="card" data-aos="fade-up">
-        <img
-          src="https://source.unsplash.com/random/500x400/?fashion"
-          alt="#"
-        />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x500/?color" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x400/?oceans" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x500/?wild" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img
-          src="https://source.unsplash.com/random/500x500/?gallery"
-          alt="#"
-        />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x500/?bikes" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x400/?trees" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x500/?snow" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x400/?forest" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x400/?water" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img
-          src="https://source.unsplash.com/random/500x400/?vegetation"
-          alt="#"
-        />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x400/?sky" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img
-          src="https://source.unsplash.com/random/500x400/?animals"
-          alt="#"
-        />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img
-          src="https://source.unsplash.com/random/500x400/?architecture"
-          alt="#"
-        />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x400/?art" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x400/?landscape alt="#"
-        />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x400/?tech" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x400/?love" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img src="https://source.unsplash.com/random/500x400/?cars" alt="#" />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-      <div class="card" data-aos="fade-up">
-        <img
-          src="https://source.unsplash.com/random/500x400/?vintage"
-          alt="#"
-        />
-        <p>Lorem ipsum dolor sit amet.</p>
-      </div>
-    </div>
-
-    <!--Socials Section -->
-    <div class="socials">
-      <a href="https://www.instagram.com" target="_blank">
-        <img src="./assets/icons/instagram.png" alt="instagram icon" />
-      </a>
-    </div>
     <!-- Footer Section -->
-    <footer>&copy; MISFITS INC, 2021</footer>
+    <!-- <footer>&copy; MISFITS INC, 2021</footer> -->
     <!-- AOS JS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -186,4 +43,5 @@
       });
     </script>
   </body>
+
 </html>
