Edit, Style and Add Media Queries

--- a/about.html
+++ b/about.html
@@ -8,6 +8,16 @@
         <meta name="photos" content="index, follow" />
         <meta name="description" content="Art" />
         <title>Christine Waczynski | About</title>
+        <!-- Normalize CSS -->
+        <link rel="stylesheet" href="./assets/css/vendor/normalize.css">
+
+        <!-- Grid CSS -->
+        <link rel="stylesheet" href="./assets/css/vendor/grid.css">
+
+        <!-- About CSS -->
+        <link rel="stylesheet" href="./assets/css/styles.css">
+
+        <!-- Main CSS -->
         <link rel="stylesheet" href="./assets/css/about.css">
     </head>
 
@@ -33,18 +43,18 @@
 
         <section>
             <h1>Vita</h1>
-            <div>
+            <div class="history-section">
                 <h3>Seit 1994</h3>
                 <p>Teilnahme an div. Atelier Arbeiten bei regionalen Künstlern</p>
-            </div>
 
-            <div>
+
+
                 <h3>2000 - 2003</h3>
                 <p>Studium Malerei und Grafik am Institut für Ausbildung</p>
                 <p>in bildender Kunst und Kunsttherapie IBKK in Bochum</p>
-            </div>
 
-            <div>
+
+
                 <h3>2003</h3>
                 <p>Seminar ,,Aktzeichnen" bei Volker Altrichter an der Europäischen Kunstakademie
                 </p>
@@ -52,14 +62,14 @@
                 <p>Experimentelle Malerei bei Prof. Chung Guang Yang</p>
                 <p>Studienabschluss am IBKK</p>
                 <p>Meisterklasse Prof. Dr. Qi Yang</p>
-            </div>
 
-            <div>
+
+
                 <h3>2009</h3>
                 <p>Diplom im Fachbereich Malerei und Grafik</p>
-            </div>
 
-            <div>
+
+
                 <h3>2010</h3>
                 <p>Seminar Figürliches Malen und Zeichnen an der Europäischen Kunstakademie Trier
                 </p>
@@ -135,6 +145,32 @@
             </div>
         </section>
 
+        <!-- Footer -->
+        <Footer class="footer">
+            <div class="row">
+
+                <!-- Address -->
+                <div class="col span-1-of-3">
+                    <p class="footer__section">Christine Waczynski</p>
+                    <p class="footer__section">Germany</p>
+                </div>
+
+                <!-- Contacts -->
+                <div class="col span-1-of-3">
+                    <p class="footer__section">Contact Me</p>
+                    <p class="contacts socials">hello@christinewaczynski.de</p>
+                </div>
+
+                <!-- Socials -->
+                <div class="col span-1-of-3">
+                    <p class="footer__section socials">
+                        <a href="https://www.instagram.com">
+                            <img src="./assets/icons/instagram.png" alt="instagram icon" />
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </footer>
 
     </body>
 
