Add and Edit Contact Section

--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,9 @@
         <link rel="stylesheet" href="./assets/css/vendor/grid.css">
 
         <!-- Main CSS -->
+        <link rel="stylesheet" href="./assets/css/styles.css">
+
+        <!-- Contact CSS -->
         <link rel="stylesheet" href="./assets/css/contact.css">
     </head>
 
@@ -40,11 +43,11 @@
 
         <section class="contact__section">
             <div class="row">
-                <h1 class="white">Contact & address</h1>
+                <h1>Contact & Address</h1>
                 <p>New business, general curiosity, enquiries or support:</p>
             </div>
             <div class="row">
-                <p class="white mail">hello@christinewaczynski.de</p>
+                <p class="mail">hello@christinewaczynski.de</p>
             </div>
             <div class="row">
                 <p>Hamburg,<br />Germany</p>
