Edit about, contact and work pages

--- a/work.html
+++ b/work.html
@@ -15,6 +15,9 @@
         <link rel="stylesheet" href="./assets/css/vendor/grid.css">
 
         <!-- Main CSS -->
+        <link rel="stylesheet" href="./assets/css/styles.css">
+
+        <!-- Work CSS -->
         <link rel="stylesheet" href="./assets/css/work.css">
     </head>
 
