Edit about, contact and work pages

--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
                 <!-- Address -->
                 <div class="col span-1-of-3">
                     <p class="footer__section">Christine Waczynski</p>
-                    <p class="footer__section">Germany</p>
+                    <p class="footer__section">Hamburg, Germany</p>
                 </div>
 
                 <!-- Contacts -->
