--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="photos" content="index, follow" />
     <meta name="description" content="Art" />
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+
     <!-- CSS animation -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- Stylesheet Link -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Christine Waczynski</title>
@@ -18,7 +23,7 @@
     <!-- Navbar Section -->
     <nav>
       <div class="wrapper">
-        <div class="logo"><a href="index.html">Christine Waczynski</a></div>
+        <div class="logo"><a href="index.html">CW</a></div>
         <ul class="nav-links">
           <li><a href="about.html">About</a></li>
           <li><a href="work.html">Work</a></li>
