--- a/about.html
+++ b/about.html
@@ -8,6 +8,10 @@
         <meta name="photos" content="index, follow" />
         <meta name="description" content="Art" />
         <title>Christine Waczynski | About</title>
+
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+
         <!-- Normalize CSS -->
         <link rel="stylesheet" href="./assets/css/vendor/normalize.css">
 
@@ -26,7 +30,7 @@
         <header>
             <nav>
                 <div class="wrapper">
-                    <div class="logo"><a href="index.html">Christine Waczynski</a></div>
+                    <div class="logo"><a href="index.html">CW</a></div>
                     <ul class="nav-links">
                         <li><a href="about.html">About</a></li>
                         <li><a href="work.html">Work</a></li>
@@ -73,8 +77,18 @@
                 <h3>2010</h3>
                 <p>Seminar Figürliches Malen und Zeichnen an der Europäischen Kunstakademie Trier
                 </p>
-                <p>Acryl auf Leinwand 70 x 70 cm</p>
-                <p>„Kunst gibt nicht das Sichtbare wieder, sondern macht sichtbar” Paul Kies</p>
+
+                <h3>2015</h3>
+                <p>Seminar Figürliches Malen und Zeichnen an der Europäischen Kunstakademie Trier
+                </p>
+
+                <h3>2017</h3>
+                <p>Seminar Figürliches Malen und Zeichnen an der Europäischen Kunstakademie Trier
+                </p>
+
+                <h3>2020</h3>
+                <p>Seminar Figürliches Malen und Zeichnen an der Europäischen Kunstakademie Trier
+                </p>
             </div>
         </section>
 
